@@ -856,7 +856,7 @@ spmtype.help    = {
 simages         = cfg_files;
 simages.tag     = 'simages';
 simages.name    = 'Source images';
-simages.help    = {'Select iamges for trimming (e.g. T1 images).' ''};
+simages.help    = {'Select images for trimming (e.g. T1 images).' ''};
 simages.filter  = 'image';
 simages.ufilter = '.*';
 simages.num     = [1 Inf];
@@ -864,7 +864,7 @@ simages.num     = [1 Inf];
 images1         = cfg_files;
 images1.tag     = 'oimages';
 images1.name    = 'Other images';
-images1.help    = {'Select other images that were trimmed similar to the source images (e.g. corregistrated PD images).' ''};
+images1.help    = {'Select other images that should be trimmed similar to the source images (e.g. coregistrated images).' ''};
 images1.filter  = 'image';
 images1.ufilter = '.*';
 images1.num     = [1 Inf];
@@ -872,7 +872,7 @@ images1.num     = [1 Inf];
 oimages          = cfg_repeat;
 oimages.tag      = 'oimages';
 oimages.name     = 'Images';
-oimages.help     = {'Select other images that were trimmed similar to the source images. For example, the source images are a set of T1 images, whereas the second set may be a set of coregistered PD images of the same subjects with the same image dimension.' ''};
+oimages.help     = {'Select other images that should be trimmed similar to the source images. For example, the source images are a set of T1 images, whereas the second set may be a set of coregistered images of the same subjects with the same image dimension.' ''};
 oimages.values   = {images1};
 oimages.val      = {};
 oimages.num      = [0 Inf];
@@ -883,7 +883,7 @@ pth.name        = 'Percentual trimming threshold';
 pth.strtype     = 'r';
 pth.num         = [1 1];
 pth.val         = {0.4};
-pth.help        = {'Percentual treshold for trimming. Lower values will result in wider mask, ie. more air, whereas higher values with remove more air but maybe also bias tissue with low intensity.' ''};
+pth.help        = {'Percentual treshold for trimming. Lower values will result in a wider mask, ie. more air, whereas higher values will remove more air but maybe also brain regions with very low intensity.' ''};
 
 avg             = cfg_entry;
 avg.tag         = 'avg';
